[package]
name = "actix-context-redesign"
version = "0.1.0"
authors = ["Jonathas-Conceicao <jadoliveira@inf.ufpel.edu.br>"]
edition = "2018"
publish = false

[dependencies]
actix = { git = "https://github.com/Jonathas-Conceicao/actix", branch = "topic/allow_external_context_impl" }
actix-rt = { git = "https://github.com/Jonathas-Conceicao/actix-net", branch = "topic/wait_spawned" }

[dev-dependencies]
tokio = { version = "0.2", default-features = false, features = [ "time" ] }
